# abetVideos

./: .dockerignore  .env.example  .gitignore  FUTURE_PLAN.md  README.md  docker-compose.yml  imp.md  run.sh
.agents/tasks/task-ai-media-generation-fallback/: context.json  task.json
.agents/tasks/task-ai-video-generator/: 2025-01-15-101100-review.md  2025-01-15-102100-review.md  context.json  (+1 more)
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  json_storage.py  main.py  settings_manager.py
backend/app/auth/: dependencies.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  branding.py  editor.py  health.py  library.py  settings.py  videos.py
backend/app/services/: ai_gateway.py  ai_image_provider.py  ai_video_provider.py  audio_processor.py  auth_service.py  branding_service.py  history_service.py  library_service.py  local_media_provider.py  media_sourcer.py  music_service.py  script_generator.py  task_manager.py  tts_service.py  video_assembler.py  video_editor.py
backend/scripts/: scrape_bing_images.py
backend/tests/: conftest.py  test_ai_providers.py  test_auth.py  test_editor.py  test_history.py  test_integration.py  test_schemas.py  test_script_generator.py  test_settings.py  test_task_manager.py
demo/: test-run-results.md
docs/adr/: 001-json-file-storage.md  002-edge-tts.md  003-auth-strategy.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: App.test.tsx  EditorPage.test.tsx
(+54 files in other folders)
